Update footer text for site creator

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <tr><td>العشاء</td><td id="isha"></td></tr>
 </table>
 
-<footer>دعاء لصانع الموقع: صلاح نصير 💖</footer>
+<footer>الدعاء لصانع الموقع: صلاح نصير 💖</footer>
 
 <script>
 let prayerTimes = {};
