--- a/index.html
+++ b/index.html
@@ -1,142 +1,168 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>مواقيت الصلاة</title>
+<title>سبحة الأذكار</title>
 <style>
-    body {
-        font-family: "Tajawal", sans-serif;
-        background: linear-gradient(135deg, #667eea, #764ba2);
-        color: #fff;
-        text-align: center;
-        padding: 20px;
-        direction: rtl;
-        min-height: 100vh;
-    }
-    h1 { margin-bottom: 15px; font-size: 36px; text-shadow: 1px 1px 4px rgba(0,0,0,0.3); }
-    #location { margin-bottom: 20px; font-weight: bold; font-size: 18px; color: #f0f0f0; }
-    #cityInput input { padding: 10px; font-size: 16px; border: none; border-radius: 5px; width: 200px; outline: none; }
-    #cityInput button { padding: 10px 15px; font-size: 16px; border: none; border-radius: 5px; margin-left: 5px; background-color: #ffbe76; color: #333; cursor: pointer; transition: 0.3s; }
-    #cityInput button:hover { background-color: #fab1a0; }
-    #nextPrayer { font-size: 20px; margin: 20px auto; padding: 12px; background-color: rgba(255,255,255,0.2); border-radius: 10px; width: fit-content; min-width: 250px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
-    table { margin: 0 auto; border-collapse: separate; border-spacing: 0 10px; width: 90%; max-width: 400px; }
-    tr { background-color: rgba(255,255,255,0.15); border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); transition: 0.3s; }
-    tr:hover { background-color: rgba(255,255,255,0.25); }
-    td:first-child { font-weight: bold; padding-left: 10px; }
-    td:last-child { text-align: left; padding-right: 10px; }
-    footer { margin-top: 30px; font-size: 16px; color: #fff; background-color: rgba(0,0,0,0.2); padding: 10px 0; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.2); }
+  body {
+    background: radial-gradient(circle, #000000 60%, #001900);
+    color: #00ff80;
+    font-family: "Tajawal", sans-serif;
+    text-align: center;
+    padding: 20px;
+    transition: background 0.6s, color 0.6s;
+  }
+  h1 {
+    color: #00ff80;
+    font-size: 28px;
+    margin-bottom: 15px;
+    text-shadow: 0 0 10px #00ff80;
+  }
+  .azkar-box {
+    background: rgba(0, 30, 0, 0.8);
+    border-radius: 20px;
+    box-shadow: 0 0 25px rgba(0, 255, 100, 0.4);
+    padding: 20px;
+    margin: 25px auto;
+    width: 90%;
+    transition: all 0.4s ease;
+  }
+  .text {
+    font-size: 18px;
+    line-height: 1.7;
+    white-space: pre-line;
+  }
+  .count {
+    margin: 15px auto;
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    border: 3px solid #00ff80;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 34px;
+    font-weight: bold;
+    color: #00ff80;
+    box-shadow: 0 0 25px rgba(0, 255, 100, 0.4);
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  .count:active { transform: scale(0.92); }
+  .switch {
+    margin-top: 25px;
+    background: #00ff80;
+    color: black;
+    padding: 10px 25px;
+    border: none;
+    border-radius: 25px;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 0 0 15px rgba(0,255,100,0.3);
+    transition: background 0.4s;
+  }
+  .switch:hover {
+    background: #00cc66;
+  }
 </style>
 </head>
 <body>
-
-<h1>🕌 مواقيت الصلاة</h1>
-<p id="location">جاري تحديد موقعك...</p>
-
-<div id="cityInput">
-    <input type="text" id="city" placeholder="ادخل مدينتك">
-    <button onclick="getPrayerByCity()">احصل على مواقيت الصلاة</button>
-</div>
-
-<div id="nextPrayer">جارٍ حساب الصلاة القادمة...</div>
-
-<table>
-    <tr><td>الفجر</td><td id="fajr"></td></tr>
-    <tr><td>الشروق</td><td id="sunrise"></td></tr>
-    <tr><td>الظهر</td><td id="dhuhr"></td></tr>
-    <tr><td>العصر</td><td id="asr"></td></tr>
-    <tr><td>المغرب</td><td id="maghrib"></td></tr>
-    <tr><td>العشاء</td><td id="isha"></td></tr>
-</table>
-
-<footer>الدعاء لصانع الموقع: صلاح عبده 💖</footer>
+  <h1>(بسم الله الرحمن الحيم) </h1>
+<h2>🏙️ أذكار الصباح 🌅</h2>
+<div id="container"></div>
+<button class="switch" onclick="toggleTheme()">🎨 تبديل الألوان</button>
 
 <script>
-let prayerTimes = {};
+const morning = [
+  {text:"بسم الله الذي لا يضر مع اسمه شيء في الأرض ولا في السماء وهو السميع العليم",count:3},
+  {text:"أعوذ بالله من الشيطان الرجيم\nالله لا إله إلا هو الحي القيوم...",count:1},
+  {text:"اللهم بك أصبحنا وبك أمسينا وبك نحيا وبك نموت وإليك النشور",count:1},
+  {text:"سبحان الله",count:33},
+  {text:"الحمد لله",count:33},
+  {text:"الله أكبر",count:34},
+  {text:"رضيت بالله رباً وبالإسلام ديناً وبمحمد ﷺ نبياً",count:3},
+  {text:"أستغفر الله العظيم وأتوب إليه",count:100},
+  {text:"اللهم صل وسلم على نبينا محمد",count:10},
+  {text:"اللهم إني أصبحت أشهدك وأشهد حملة عرشك...",count:4},
+];
 
-if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(fetchPrayerTimes, showError);
-} else {
-    document.getElementById('location').textContent = "المتصفح لا يدعم تحديد الموقع";
-}
+const evening = [
+  {text:"بسم الله الذي لا يضر مع اسمه شيء في الأرض ولا في السماء وهو السميع العليم",count:3},
+  {text:"اللهم بك أمسينا وبك أصبحنا وبك نحيا وبك نموت وإليك المصير",count:1},
+  {text:"سبحان الله",count:33},
+  {text:"الحمد لله",count:33},
+  {text:"الله أكبر",count:34},
+  {text:"رضيت بالله رباً وبالإسلام ديناً وبمحمد ﷺ نبياً",count:3},
+  {text:"أستغفر الله العظيم وأتوب إليه",count:100},
+  {text:"اللهم صل وسلم على نبينا محمد",count:10},
+  {text:"اللهم ما أمسى بي من نعمةٍ أو بأحدٍ من خلقك فمنك وحدك...",count:1},
+];
 
-function fetchPrayerTimes(position) {
-    const lat = position.coords.latitude;
-    const lon = position.coords.longitude;
-    fetch(`https://api.aladhan.com/v1/timings?latitude=${lat}&longitude=${lon}&method=5`)
-    .then(res => res.json())
-    .then(data => {
-        document.getElementById('location').textContent = `الموقع: ${data.data.meta.timezone}`;
-        prayerTimes = data.data.timings;
-        updatePrayerTable();
-        startCountdown();
-    })
-    .catch(err => document.getElementById('location').textContent = "حدث خطأ في جلب مواقيت الصلاة");
-}
+let list = morning;
+let index = 0;
+let mode = "morning";
+const colors = ["#00ff80","#00e0ff","#ff00ff","#ffaa00","#ff4080","#00ffaa","#c0ff00"];
 
-function getPrayerByCity() {
-    const city = document.getElementById('city').value;
-    if(!city) return alert("ادخل المدينة");
-    fetch(`https://api.aladhan.com/v1/timingsByCity?city=${city}&country=Egypt&method=5`)
-    .then(res => res.json())
-    .then(data => {
-        document.getElementById('location').textContent = `الموقع: ${city}`;
-        prayerTimes = data.data.timings;
-        updatePrayerTable();
-        startCountdown();
-    })
-    .catch(err => alert("حدث خطأ في جلب مواقيت الصلاة"));
-}
-
-function updatePrayerTable() {
-    document.getElementById('fajr').textContent = prayerTimes.Fajr;
-    document.getElementById('sunrise').textContent = prayerTimes.Sunrise;
-    document.getElementById('dhuhr').textContent = prayerTimes.Dhuhr;
-    document.getElementById('asr').textContent = prayerTimes.Asr;
-    document.getElementById('maghrib').textContent = prayerTimes.Maghrib;
-    document.getElementById('isha').textContent = prayerTimes.Isha;
-}
-
-function startCountdown() {
-    setInterval(updateNextPrayer, 1000);
-}
-
-function updateNextPrayer() {
-    const now = new Date();
-    const prayers = ['Fajr','Dhuhr','Asr','Maghrib','Isha'];
-    const arabicNames = { Fajr:'الفجر', Dhuhr:'الظهر', Asr:'العصر', Maghrib:'المغرب', Isha:'العشاء' };
-
-    let nextPrayerName = '';
-    let nextPrayerTime = null;
-
-    for(let p of prayers){
-        const [h,m] = prayerTimes[p].split(':').map(Number);
-        const prayerDate = new Date();
-        prayerDate.setHours(h,m,0,0);
-        if(prayerDate > now){
-            nextPrayerName = p;
-            nextPrayerTime = prayerDate;
-            break;
-        }
+function loadZikr() {
+  const c = document.getElementById("container");
+  c.innerHTML = "";
+  if(index >= list.length){
+    if(mode === "morning"){
+      mode = "evening";
+      list = evening;
+      index = 0;
+      document.querySelector("h1").textContent = "🌇 أذكار المساء 🌃";
+      setTimeout(loadZikr,1500);
+    }else{
+      c.innerHTML = "<h2>✅ انتهت جميع الأذكار</h2>";
     }
-
-    if(!nextPrayerTime){
-        const [h,m] = prayerTimes['Fajr'].split(':').map(Number);
-        nextPrayerTime = new Date();
-        nextPrayerTime.setDate(nextPrayerTime.getDate()+1);
-        nextPrayerTime.setHours(h,m,0,0);
-        nextPrayerName = 'الفجر';
+    return;
+  }
+  const z = list[index];
+  const box = document.createElement("div");
+  box.className = "azkar-box";
+  box.innerHTML = `<p class='text'>${z.text}</p>`;
+  const counter = document.createElement("div");
+  counter.className = "count";
+  counter.textContent = "0";
+  let current = 0;
+  let colorIndex = 0;
+  counter.onclick = () => {
+    if(current < z.count){
+      current++;
+      counter.textContent = current;
+      counter.style.borderColor = colors[colorIndex % colors.length];
+      counter.style.color = colors[colorIndex % colors.length];
+      counter.style.boxShadow = `0 0 25px ${colors[colorIndex % colors.length]}`;
+      colorIndex++;
     }
-
-    const diff = nextPrayerTime - now;
-    const hours = Math.floor(diff/1000/3600);
-    const minutes = Math.floor((diff/1000%3600)/60);
-    const seconds = Math.floor(diff/1000%60);
-
-    document.getElementById('nextPrayer').textContent = 
-        `الصلاة القادمة: ${arabicNames[nextPrayerName] || nextPrayerName} بعد ${hours} : ${minutes.toString().padStart(2,'0')} : ${seconds.toString().padStart(2,'0')}`;
+    if(current >= z.count){
+      index++;
+      setTimeout(loadZikr,400);
+    }
+  };
+  box.appendChild(counter);
+  c.appendChild(box);
 }
-function showError(){document.getElementById('location').textContent="تم رفض الوصول للموقع، يمكنك إدخال مدينتك يدويًا";}
+
+let dark = true;
+function toggleTheme(){
+  dark = !dark;
+  if(dark){
+    document.body.style.background = "radial-gradient(circle, #000000 60%, #001900)";
+    document.body.style.color = "#00ff80";
+    document.querySelector("h1").style.color = "#00ff80";
+    document.querySelector("h1").style.textShadow = "0 0 10px #00ff80";
+  } else {
+    document.body.style.background = "radial-gradient(circle, #fefefe 50%, #e0ffe0)";
+    document.body.style.color = "#004d00";
+    document.querySelector("h1").style.color = "#004d00";
+    document.querySelector("h1").style.textShadow = "none";
+  }
+}
+
+loadZikr();
 </script>
 
 </body>
